# Flutter-chat-claude

./: FEATURE_PLAN.md  README.md  SCHEDULING_PLAN.md  plan.md
.github/workflows/: firebase-hosting-pull-request.yml
chat_app/: .firebaseignore  .firebaserc  .gitignore  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PLAN.md  DEPLOY_TO_FIREBASE.md  DEPLOY_TO_GITHUB_PAGES.md  DEPLOY_TO_VERCEL.md  FEATURES_SHOWCASE.md  FEATURE_SUGGESTIONS.md  PROFILE_EDIT_IMPLEMENTATION_PLAN.md  README.md  TROUBLESHOOTING.md  VERCEL_404_TROUBLESHOOTING.md  VERCEL_DEPLOYMENT.md  build.sh  deploy.sh  firebase.json  generate_build_info.sh  landing_page_prompt.txt  my_users.txt  package-lock.json  pubspec.yaml  supabase_profile_migration.sql  supabase_setup.sql  vercel.json
chat_app/.firebase/: hosting.YnVpbGQvd2Vi.cache  hosting.eQ.cache
chat_app/docs/: AI_COMMAND_IMPLEMENTATION_SUMMARY.md  AI_FEATURE_SECURITY.md  FEATURE_SUGGESTIONS.md  IMPLEMENTATION_HISTORY.md  ORGANIZATION_SUMMARY.md  README.md  UI_IMPROVEMENTS.md
chat_app/integration_test/: README.md  screenshot_automation_test.dart
chat_app/lib/: main.dart
smartchat-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  langgraph.json  pyproject.toml  render.yaml  server.py
smartchat-agent/src/: scheduler.py
smartchat-agent/src/agent/: graph.py  state.py
smartchat-agent/src/tools/: __init__.py  digest.py  messaging.py  scheduling.py  sentiment.py  summarization.py  supabase_client.py
smartchat-agent/supabase_migrations/: 001_scheduled_messages.sql  002_process_scheduled_messages_fn.sql
(+110 files in other folders)
